[package]
name = "logger"
version = "0.1.0"
description = "An opinionated slimmer version of `env_logger` for personal use"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anstream = "0.6.14"
anstyle = "1.0.7"
env_filter = "0.1.0"
log = "0.4.21"
